# IRCbot

./: CMakeLists.txt  main.cpp
core/: bot_connect.cpp  bot_connect.hpp
